force-app/main/default/objects/Opportunity/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Armazena o percentual de desconto aplicado na oportunidade.</description>
    <inlineHelpText>Informe o percentual de desconto negociado para esta venda.</inlineHelpText>
    <label>Desconto (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>