force-app/main/default/objects/Opportunity/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <description>Calcula o valor final da Opportunity considerando o valor dos produtos e a taxa financeira aplicada conforme a condição de pagamento.</description>
    <formula>Amount * (1 + Financial_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor calculado automaticamente com base no Amount da Opportunity e na Taxa Financeira.</inlineHelpText>
    <label>Valor Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>