force-app/main/default/objects/Opportunity/fields/Financial_Rate__c.field-meta.xml
<CustomField>
    <fullName>Financial_Rate__c</fullName>
    <description>Armazena a taxa financeira aplicada à Opportunity de acordo com a condição de pagamento selecionada.</description>
    <inlineHelpText>A taxa é definida automaticamente conforme o prazo de pagamento. Atualmente: à vista e 30 dias = 0%, 60 dias = 5% e 90 dias = 10%.</inlineHelpText>
    <label>Taxa Financeira</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>