force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Armazena o motivo pelo qual a oportunidade foi perdida.</description>
    <inlineHelpText>Selecione o principal motivo da perda desta oportunidade.</inlineHelpText>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Concorrente</fullName>
            </value>
            <value>
                <fullName>Sem interesse no momento</fullName>
            </value>
            <value>
                <fullName>Condição de pagamento</fullName>
            </value>
            <value>
                <fullName>Crédito não aprovado</fullName>
            </value>
            <value>
                <fullName>Compra adiada</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>