force-app/main/default/objects/Opportunity/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Armazena a condição de pagamento negociada para a oportunidade.</description>
    <inlineHelpText>Selecione a condição de pagamento acordada com o cliente.</inlineHelpText>
    <label>Condição de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À vista</fullName>
            </value>
            <value>
                <fullName>30 dias</fullName>
            </value>
            <value>
                <fullName>60 dias</fullName>
            </value>
            <value>
                <fullName>90 dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>