force-app/main/default/objects/Opportunity/fields/Status_da_An_lise_de_Cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Status_da_An_lise_de_Cr_dito__c</fullName>
    <description>Indica o resultado da análise de crédito da Opportunity, considerando a condição de pagamento, o valor da venda e o crédito disponível do cliente.</description>
    <inlineHelpText>Use este campo para identificar se a venda dispensa análise de crédito, está dentro do limite disponível ou depende de aprovação do Financeiro.</inlineHelpText>
    <label>Status da Análise de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não necessário</fullName>
            </value>
            <value>
                <fullName>Dentro do limite</fullName>
            </value>
            <value>
                <fullName>Pendente Financeiro</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>