force-app/main/default/objects/Opportunity/validationRules/Require_Loss_Reason_When_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Loss_Reason_When_Closed_Lost</fullName>
    <active>true</active>
    <description>Exige o preenchimento do motivo da perda ao fechar uma oportunidade como perdida.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Informe o motivo da perda antes de fechar a oportunidade como perdida.</errorMessage>
</ValidationRule>